force-app/main/default/objects/Campaign/fields/SFMC_Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Journey_Name__c</fullName>
    <description>MIS-4482</description>
    <label>SFMC Journey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>