force-app/main/default/objects/Campaign/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>If you promote multiple SW Solutions, select “Cross”</inlineHelpText>
    <label>Primary Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cross</fullName>
            </value>
            <value>
                <fullName>Web Intelligence</fullName>
            </value>
            <value>
                <fullName>Search Intelligence</fullName>
            </value>
            <value>
                <fullName>Stock Intelligence</fullName>
            </value>
            <value>
                <fullName>Sales Intelligence</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence</fullName>
            </value>
            <value>
                <fullName>DaaS</fullName>
            </value>
            <value>
                <fullName>App Intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>