force-app/main/default/objects/Campaign/fields/Status_changed__c.field-meta.xml
<CustomField>
    <fullName>Status_changed__c</fullName>
    <description>MIS-3042 - check if the campaign needs to enter the schedule flow for status change</description>
    <formula>IF( OR(And( StartDate  &lt;=  Today() ,  ISPICKVAL( Status , &quot;Planned&quot;),EndDate &gt;Today() ) , And ( Today()&gt;  EndDate  ,  ISPICKVAL( Status , &quot;In Progress&quot;))),true,false)</formula>
    <label>Status changed</label>
    <type>Checkbox</type>
</CustomField>