force-app/main/default/objects/Campaign/fields/SW_Pro_Section__c.field-meta.xml
<CustomField>
    <fullName>SW_Pro_Section__c</fullName>
    <label>SW Pro Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>App Analysis</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Google Play Keywords</fullName>
            </value>
            <value>
                <fullName>Industry Analysis</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis</fullName>
            </value>
            <value>
                <fullName>Top Apps</fullName>
            </value>
            <value>
                <fullName>Website Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>