force-app/main/default/objects/Campaign/fields/SW_Pro_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>SW_Pro_Sub_Section__c</fullName>
    <label>SW Pro Sub-Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account&gt;Details</fullName>
            </value>
            <value>
                <fullName>Account&gt;Invoices</fullName>
            </value>
            <value>
                <fullName>Account&gt;Subscription</fullName>
            </value>
            <value>
                <fullName>Account&gt;Update Billing</fullName>
            </value>
            <value>
                <fullName>Account&gt;Users</fullName>
            </value>
            <value>
                <fullName>App Analysis&gt;App Audience</fullName>
            </value>
            <value>
                <fullName>App Analysis&gt;App Engagement</fullName>
            </value>
            <value>
                <fullName>App Analysis&gt;App Overview</fullName>
            </value>
            <value>
                <fullName>App Analysis&gt;Store Page Analysis</fullName>
            </value>
            <value>
                <fullName>Dashboard&gt;Created</fullName>
            </value>
            <value>
                <fullName>Google Play Keywords&gt;Google Play Keywords</fullName>
            </value>
            <value>
                <fullName>Industry Analysis&gt;Industry Index</fullName>
            </value>
            <value>
                <fullName>Industry Analysis&gt;Leader board</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis&gt;Mobile Web</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis&gt;Organic</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis&gt;Paid</fullName>
            </value>
            <value>
                <fullName>Top Apps&gt;Category</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Competitors</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Traffic Destination</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Traffic sources</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Website Audience</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Website Content</fullName>
            </value>
            <value>
                <fullName>Website Analysis&gt;Website Overview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>