force-app/main/default/objects/Campaign/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>MIS-4231</description>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Leadgen</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>