force-app/main/default/objects/Campaign/fields/Target_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Target_Business_Unit__c</fullName>
    <description>MIS-2880</description>
    <label>Target Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
                <isActive>false</isActive>
                <label>SMB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>