force-app/main/default/objects/Campaign/fields/Total_Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Members__c</fullName>
    <formula>NumberOfLeads + NumberOfContacts - NumberOfConvertedLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>