force-app/main/default/objects/Campaign/fields/Unique_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Campaign_Name__c</fullName>
    <description>Unique campaign name.</description>
    <label>Unique Campaign Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>