force-app/main/default/objects/Campaign/fields/Update_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Update_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-7645</description>
    <label>Update Campaign Members</label>
    <type>Checkbox</type>
</CustomField>