force-app/main/default/objects/Campaign/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KW Research</fullName>
            </value>
            <value>
                <fullName>Paid Search Optimization</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Consultative Selling</fullName>
            </value>
            <value>
                <fullName>App Intelligence</fullName>
            </value>
            <value>
                <fullName>Competitive Research</fullName>
            </value>
            <value>
                <fullName>Competitive Analysis</fullName>
            </value>
            <value>
                <fullName>Website Analysis</fullName>
            </value>
            <value>
                <fullName>Similarweb in Workflow</fullName>
            </value>
            <value>
                <fullName>Marketing Strategy</fullName>
            </value>
            <value>
                <fullName>Marketplace Intelligence</fullName>
            </value>
            <value>
                <fullName>Alternative Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>