force-app/main/default/objects/Campaign/fields/Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Id__c</fullName>
    <description>Id of the Webinar in Zoom - for integration propose.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the Webinar in Zoom</inlineHelpText>
    <label>Webinar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>