force-app/main/default/objects/Campaign/validationRules/Parent_Campaign_Must_Have_Program_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Campaign_Must_Have_Program_Name</fullName>
    <active>true</active>
    <description>Program Name must be populated when Campaign Type=&quot;Parent&quot;</description>
    <errorConditionFormula>ISPICKVAL(Type,&quot;Parent&quot;) &amp;&amp;
	 ISBLANK(Program_Name__c)</errorConditionFormula>
    <errorMessage>You must populate the field &quot;Program Name&quot; when creating a Parent Campaign</errorMessage>
</ValidationRule>