force-app/main/default/objects/Campaign/validationRules/Required_fields_for_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_for_type</fullName>
    <active>true</active>
    <description>MIS-2422</description>
    <errorConditionFormula>AND(
 OR(  
 ISPICKVAL( Type , &quot;Webinar - External&quot;),
 ISPICKVAL( Type , &quot;External Event&quot;),
 ISPICKVAL( Type , &quot;Owned Event&quot; ),
 ISPICKVAL( Type , &quot;Webinar&quot;),
 ISPICKVAL( Type , &quot;Conference&quot;),
 ISPICKVAL( Type , &quot;Customer Event&quot;)
   ),

OR( 
 ISBLANK(Salesloft_Cadence_Link__c ),
 ISBLANK(EndDate)
   ),

 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 $Profile.Name &lt;&gt; &quot;Integration User&quot;
)</errorConditionFormula>
    <errorMessage>&quot;End Date&quot; and &quot;Salesloft Cadence link&quot; are mandatory for this Campaign Type.</errorMessage>
</ValidationRule>