force-app/main/default/objects/Campaign/listViews/Email_Clicks_Q1.listView-meta.xml
<ListView>
    <fullName>Email_Clicks_Q1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>email ungated</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>lessOrEqual</operation>
        <value>4/1/2020</value>
    </filters>
    <label>Email Clicks Q1</label>
</ListView>