force-app/main/default/objects/Campaign/listViews/Enterprise_Holdings_US_2018.listView-meta.xml
<ListView>
    <fullName>Enterprise_Holdings_US_2018</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Enterprise Holdings - US 2018</label>
</ListView>