force-app/main/default/objects/Campaign/listViews/Landing_Page_Generated_Campaigns.listView-meta.xml
<ListView>
    <fullName>Landing_Page_Generated_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Pardot</value>
    </filters>
    <label>Landing Page Generated Campaigns</label>
</ListView>