force-app/main/default/objects/Campaign/listViews/Ungated_Content_Campaigns.listView-meta.xml
<ListView>
    <fullName>Ungated_Content_Campaigns</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>Solution__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2019</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>lessThan</operation>
        <value>4/1/2020</value>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>Email campaign Pardot</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>Ungated Content Campaigns</label>
</ListView>